Fix mistake and add method specific DevicePatchable type
