# docs/swagger.json
@@ -458,12 +458,12 @@
                         "in": "query"
                     },
                     {
-                        "description": "Registration pin\n`pin`: 4 digit registration pin recieved by the device via websocket API",
+                        "description": "Properties to patch",
                         "name": "registration_data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.PostDeviceRegisterBody"
+                            "$ref": "#/definitions/handlers.DevicePatchable"
                         }
                     }
                 ],
@@ -1553,6 +1553,14 @@
                 "id": {
                     "type": "integer"
                 },
+                "room": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.DevicePatchable": {
+            "type": "object",
+            "properties": {
                 "room": {
                     "type": "string"
                 }
